@@ -1374,6 +1374,35 @@ ptp_canon_getfolderentries (PTPParams* params, uint32_t store, uint32_t p2,
 	return ret;
 }
 
+/**
+ * ptp_canon_theme_download:
+ *
+ * This command downloads the specified theme slot, including jpegs
+ * and wav files.
+ *  
+ * params:	PTPParams*
+ *      uint32_t themenr - nr of theme
+ *
+ * Return values: Some PTP_RC_* code.
+ *      unsigned char **data - pointer to data pointer
+ *      unsigned int  *size - size of data returned
+ *
+ **/
+uint16_t
+ptp_canon_theme_download (PTPParams* params, uint32_t themenr,
+		unsigned char **data, unsigned int *size)
+{
+	PTPContainer ptp;
+
+	*data = NULL;
+	*size = 0;
+	PTP_CNT_INIT(ptp);
+	ptp.Code	= PTP_OC_CANON_ThemeDownload;
+	ptp.Param1	= themenr;
+	ptp.Nparam	= 1;
+	return ptp_transaction(params, &ptp, PTP_DP_GETDATA, 0, data, size); 
+}
+
 
 /* Non PTP protocol functions */
 /* devinfo testing functions */
